# cem-wich

./: .gitignore  Gruntfile.js  LICENSE  README.md  build_tasks.py  cem_utility.py  cem_wich.py  environment.yml  gulpfile.js  main.py  package-lock.json  package.json  private_key.json  requirements.txt  test.py
client/html/: application.html
client/js/: application.js  controlsTab.js  gridTab.js  mapInterface.js  modal.js  modelInterface.js  runTab.js  utils.js  waveTab.js
client/scss/: application.scss
server/C/: CMakeLists.txt  CMakeSettings.json
server/C/_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  bmi_cem-static.vcxproj  bmi_cem-static.vcxproj.filters  bmi_cem.vcxproj  cem-web.sln  cmake_install.cmake
server/C/_build/.cmake/api/v1/reply/: cache-v2-b524b22ce14fb4875825.json  cmakeFiles-v1-aba684b79054fc4bb530.json  codemodel-v2-aca86ded53ad5c6e7a97.json  index-2019-08-20T20-30-45-0689.json  target-ALL_BUILD-Debug-ed83b2759875089365da.json  target-ZERO_CHECK-Debug-e7a9584baddd3e1c617c.json  target-bmi_cem-Debug-aa0c2a222153f3566054.json  target-bmi_cem-static-Debug-718422cb80a572fec810.json
server/C/bmi/: bmi_EXPORTS.h  bmi_cem.c  bmi_cem.h
server/C/cem/: BeachGrid.c  BeachGrid.h  BeachNode.c  BeachNode.h  BeachProperties.c  BeachProperties.h  WaveClimate.c  WaveClimate.h  cem.c  config.h  consts.h  globals.h  sedtrans.c  sedtrans.h  utils.c  utils.h
server/C/py_interface/: cem_EXPORTS.h  cem_interface.c  cem_interface.h
server/pyfiles/: __init__.py  analyses.py  config.py  eehelpers.py  globals.py
server/test/: inlet_test.txt  inlet_test.xlsx  process.asv  process.m  shoreline.txt
static/css/: application.css
static/js/: application.js  mapInterface.js  modelInterface.js
templates/: application.html  home.html
tests/: run_new.py  run_orig.py  test.out  test.py  time_test.py
tests/cem_boundary_conds/: CMakeLists.txt  CMakeSettings.json
tests/cem_boundary_conds/cem/: cem.c  cem_EXPORTS.h  config.h  consts.h  utils.c
tests/cem_orig/: CMakeSettings.json
tests/cem_orig/cem/: cem.c  cem.h  config.h  consts.h  utils.h
tests/test/: azmToShoreNormal.m  cp_cnv_params.mat  disp_shorelines.m  getShoreline.m  orig_shoreline.txt  process.m  processWIS.m  test_angles.m  wis63436.mat  wis63436.txt  wis63436_weekly.csv  wis63436_weekly.txt
tests/test/input/: canaveral.txt  canaveral.xlsx  config.txt  inlet_test.xlsx  murray.xlsx  murray2.xlsx  rodanthe.xlsx  shoreline_config.txt  shoreline_config.xlsx  test.xlsx  ~$shoreline_config.xlsx
